--- a/pecaviewer/src/main/res/layout/player_fragment.xml
+++ b/pecaviewer/src/main/res/layout/player_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
@@ -8,8 +7,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.google.android.exoplayer2.ui.PlayerView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.google.android.exoplayer2.ui.StyledPlayerView
             android:id="@+id/vPlayer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
